Handle the table bug
SQUASHED: AUTO-COMMIT-css-main.css,AUTO-COMMIT-example.html,AUTO-COMMIT-example2.html,AUTO-COMMIT-inspector-explorableDomInspector.js,AUTO-COMMIT-inspector-helper.js,AUTO-COMMIT-inspector-views-containerView.js,AUTO-COMMIT-inspector-views-zoomableElementsView.js,AUTO-COMMIT-inspector-views-zoomableView.js,

--- a/css/main.css
+++ b/css/main.css
@@ -38,6 +38,10 @@
   margin: 0 5px 0 5px;
 }
 
+#navigation select {
+  margin: auto 0;
+}
+
 .created {
   box-sizing: border-box;
   background: transparent;
